modules/network/private.tf
resource "aws_subnet" "subnet-private-1a" {
  vpc_id            = aws_vpc.eks_vpc.id
  cidr_block        = cidrsubnet(var.cidr_block, 8, 3)
  availability_zone = "${data.aws_region.current.region}a"

  tags = merge(
    var.tags,
    {
      Name                              = "${var.project_name}Eks_Subnet_private_1a"
      "kubernetes.io/role/internal-elb" = 1
    }
  )
}
resource "aws_subnet" "subnet-private-1b" {
  vpc_id            = aws_vpc.eks_vpc.id
  cidr_block        = cidrsubnet(var.cidr_block, 8, 4)
  availability_zone = "${data.aws_region.current.region}b"

  tags = merge(
    var.tags,
    {
      Name                              = "${var.project_name}Eks_Subnet_private_1b"
      "kubernetes.io/role/internal-elb" = 1
    }
  )
}

resource "aws_route_table_association" "eks_route_table_priv_1a" {
  subnet_id      = aws_subnet.subnet-private-1a.id
  route_table_id = aws_route_table.eks_route_table_private_1a.id
}

resource "aws_route_table_association" "eks_route_table_priv_1b" {
  subnet_id      = aws_subnet.subnet-private-1b.id
  route_table_id = aws_route_table.eks_route_table_private_1b.id
}
